# SEA-plugin-OpenSim

./: CMakeLists.txt  CustomControl.cpp  CustomControl.h  Plugin_interface.cpp  SeriesElasticActuator.cpp  SeriesElasticActuator.h  SeriesElasticActuator.txt  SeriesElasticActuator_AllInOne.txt  Test_SEA.cpp  Test_Sea_Acrobot.cpp
